@@ -77,6 +77,16 @@
     <li><span class="label label-warning">Bugfix</span> Certificate trust prompt regardless of override in keychain
         (macOS) (<a target="_blank" href="https://trac.cyberduck.io/ticket/11118">#11118</a>)
     </li>
+    <li><span class="label label-warning">Bugfix</span> [Bugfix] Failure saving credentials (CLI, Windows) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11098">#11098</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> [Bugfix] Unable to connect to cn-north-1 (S3) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11197">#11197</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> [Bugfix] Access shared files (OneDrive Business) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11102">#11102</a>)
+    </li>
+
 </ul>
 
 <p>
